traefik/IngressRoutes/4-ingressroute-rancher.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: connectora
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`connectora.platform.flexigrobots-h2020.eu`)
    priority: 10                    # [4]

    services:                       # [8]
    - kind: Service
      name: connectora
      namespace: ids-2
      serversTransport: connectora-transport
      port: 8080
      passHostHeader: true
      responseForwarding:
        flushInterval: 1ms
      scheme: https
  tls:
    certResolver: default
    domains:
    - main: connectora.platform.flexigrobots-h2020.eu
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: connectorb
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`connectorb.platform.flexigrobots-h2020.eu`)
    priority: 10                    # [4]

    services:                       # [8]
    - kind: Service
      name: connectorb
      namespace: ids-2
      serversTransport: connectorb-transport
      port: 8081
      passHostHeader: true
      responseForwarding:
        flushInterval: 1ms
      scheme: https
  tls:
    certResolver: default
    domains:
    - main: connectorb.platform.flexigrobots-h2020.eu

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: broker-reverseproxy
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`broker-reverseproxy.platform.flexigrobots-h2020.eu`)
    priority: 10                    # [4]

    services:                       # [8]
    - kind: Service
      name: broker-reverseproxy
      namespace: ids-2
      serversTransport: broker-reverseproxy-transport
      port: 443
      passHostHeader: true
      responseForwarding:
        flushInterval: 1ms
      scheme: https
  tls:
    certResolver: default
    domains:
    - main: broker-reverseproxy.platform.flexigrobots-h2020.eu
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: omejdn-access
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`omejd-idsa.platform.flexigrobots-h2020.eu`)
    priority: 10                    # [4]

    services:                       # [8]
    - kind: Service
      name: omejdn
      namespace: ids-2
      serversTransport: omejdn-idsa-transport
      port: 443
      passHostHeader: true
      responseForwarding:
        flushInterval: 1ms
      scheme: https
  tls:
    certResolver: default
    domains:
    - main: omejd-idsa.platform.flexigrobots-h2020.eu
